Fixed issue with list item not styling scrollbars

--- a/app/custom_modules/dw-layout/input.scss
+++ b/app/custom_modules/dw-layout/input.scss
@@ -1220,6 +1220,8 @@ $img-max-width: 10em;
     border-radius: 0px;
 
     .list-scroll {
+        @extend %scrollbars;
+
         overflow: auto;
         overflow-x: hidden;
 
